[package]
name = "service-rs"
version = "0.1.0"
authors = ["Jung-Kwang Lee <ntoskrnl7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
log = "0.4.14"
tokio = { version = "1.6.1", features = ["sync", "macros"] }