[package]
name = "service"
version = "0.3.0"
authors = ["Jung-Kwang Lee <ntoskrnl7@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
tokio = { version="1.7.1", features=["sync", "macros"] }

[dev-dependencies]
futures = "0.3.15"
tokio = { version="1.7.1", features=["rt-multi-thread", "time"] }
